[tool.poetry]
name = "viikko2 tehtävä1"
version = "0"
description = ""
authors = ["Hanna Varkki <h.varkki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
cowsay = "^6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
